# skypulse-weather

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
specs/006-caching-optimization/: tasks.md
specs/007-weather-snapshot/: tasks.md
src/openweather/: __init__.py  _async_client.py  _base.py  _client.py  _constants.py  _endpoints.py  _errors.py  _geolocation.py  _http.py  _logging.py  _noaa.py  _storm_mapping.py  async_client.py  cache.py  client.py  errors.py
src/openweather/models/: __init__.py  common.py  forecast.py  health.py  location.py  storm.py  weather.py
src/skypulse/: __init__.py  _async_client.py  _base.py  _cache.py  _circadian.py  _client.py  _constants.py  _endpoints.py  _errors.py  _geolocation.py  _http.py  _logging.py  _noaa.py  _storm_mapping.py  _translations.py  _usage.py  _uv.py
src/skypulse/models/: __init__.py  air_quality.py  circadian.py  common.py  forecast.py  health.py  snapshot.py  storm.py  uv.py  weather.py
tests/: conftest.py  test_adaptive_cache.py  test_air_quality.py  test_async_client.py  test_cache.py  test_circadian.py  test_client.py  test_compat.py  test_endpoints.py  test_errors.py  test_geocode_cache.py  test_geolocation.py  test_health.py  test_logging.py  test_models.py  test_prefetch.py  test_retry.py  test_storm.py  test_storm_alert.py  test_translations.py  test_usage_tracker.py  test_uv_index.py  test_version.py
tests/fixtures/: air_pollution_current.json  air_pollution_forecast.json  current_weather.json  forecast.json  geocoding_direct.json  geocoding_reverse.json  ip_geolocation.json  noaa_kp_current.json  noaa_kp_forecast.json  uv_current.json
tests/fixtures/error_responses/: 429_rate_limit.json  500_server_error.json  geolocation_error.json  noaa_unavailable.json
