[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openweather-sdk"
version = "1.0.0"
description = "A Python SDK for the OpenWeatherMap API with sync/async support, caching, and typed responses."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "cachetools>=5.0",
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "mypy>=1.10",
    "ruff>=0.5",
    "pytest-cov>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/openweather"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
strict = true
packages = ["openweather"]
mypy_path = "src"

[tool.ruff]
src = ["src"]
line-length = 100
