[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skypulse"
version = "2.0.0"
description = "Weather, space weather, and how they affect you — Python SDK with sync/async support, caching, and typed responses."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "cachetools>=5.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "mypy>=1.10",
    "ruff>=0.5",
    "pytest-cov>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/skypulse"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
strict = true
packages = ["skypulse"]
mypy_path = "src"

[tool.ruff]
src = ["src"]
line-length = 100
