[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skypulse-weather"
version = "2.1.0"
description = "Weather, space weather, and how they affect you — Python SDK with sync/async support, caching, and typed responses."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{name = "Pavlo Olshansky", email = "pavlo.olshansky@gmail.com"}]
keywords = ["weather", "space-weather", "air-quality", "uv-index", "geomagnetic", "sdk"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Typing :: Typed",
]
dependencies = [
    "cachetools>=5.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "mypy>=1.10",
    "ruff>=0.5",
    "pytest-cov>=5.0",
]

[project.urls]
Homepage = "https://github.com/Pavlo-Olshansky/skypulse-weather"
Repository = "https://github.com/Pavlo-Olshansky/skypulse-weather"
Issues = "https://github.com/Pavlo-Olshansky/skypulse-weather/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/skypulse"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
strict = true
packages = ["skypulse"]
mypy_path = "src"

[tool.ruff]
src = ["src"]
line-length = 100
